back-end: added new router for editing and deleting pacientes and historico post
