# api/models/PacienteModel.js
@@ -1,13 +1,31 @@
 class PacienteModel {
     
-    constructor(nome, idade, telefone, email, objetivo, planoAlimentar = null) {
+    constructor(
+        nome, 
+        idade, 
+        telefone, 
+        email, 
+        objetivo,
+        meta = 0,
+        pesoInicial = 0,
+        pesoAtual = 0,
+        historico = [], 
+        planoAlimentar = null
+    ) {
 
-        // propriedades úteis ao usuário final
+        // propriedades de cadastro
         this.nome = nome;
         this.idade = idade;
         this.telefone = telefone;
         this.email = email;
         this.objetivo = objetivo;
+
+        // propriedades de evoluçao
+        this.meta = meta;
+        this.pesoInicial = pesoInicial;
+        this.pesoAtual = pesoAtual;
+        this.historico = historico;
+
         this.planoAlimentar = planoAlimentar;
 
         // propriedades úteis ao sistema interno
@@ -15,6 +33,16 @@ class PacienteModel {
         this.criadoEm = new Date().toISOString();
     }
 
+}
+
+class HistoricoModel {
+    constructor(data, peso, cintura, quadril, variacao) {
+        this.data = data;
+        this.peso = peso;
+        this.cintura = cintura;
+        this.quadril = quadril;
+        this.variacao = variacao;
+    }
 }
 
 class PlanoAlimentarModel {
@@ -29,4 +57,4 @@ class PlanoAlimentarModel {
     }
 }
 
-module.exports = { PacienteModel, PlanoAlimentarModel };
+module.exports = { PacienteModel, PlanoAlimentarModel, HistoricoModel };
